--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Mon Oct 30 2023 04:18:53 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="653f2156febcba79e3382b46" data-wf-site="653f2156febcba79e3382b0a">
+<!DOCTYPE html>
+<html>
 
 <head>
   <meta charset="utf-8">
-  <title>About</title>
+  <title>Simone's Portfolio</title>
   <meta content="About" property="og:title">
   <meta content="About" property="twitter:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -26,15 +25,17 @@
 <body class="body">
   <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease"
     role="banner" class="navigation w-nav">
-    <div class="navigation-items">
-      <a href="old-home.html" class="logo-link w-nav-brand"></a>
+    <div class="navigation-items"><img src="images/simone-logo.jpeg" loading="lazy" width="100"
+        sizes="(max-width: 479px) 42vw, 100px" alt=""
+        srcset="images/simone-logo-p-500.jpeg 500w, images/simone-logo-p-800.jpeg 800w, images/simone-logo-p-1080.jpeg 1080w, images/simone-logo.jpeg 1200w"
+        class="logo logo-link">
       <div class="navigation-wrap">
         <nav role="navigation" class="navigation-items w-nav-menu">
           <a href="index.html" aria-current="page" class="navigation-item w-nav-link w--current">ABOUT</a>
-          <a href="old-home.html" class="navigation-item w-nav-link">EXPERIENCE</a>
-          <a href="styleguide.html" class="navigation-item w-nav-link">PROJECTS</a>
-          <a href="styleguide.html" class="navigation-item w-nav-link">PROFESSIONAL ACTIVITIES</a>
-          <a href="styleguide.html" class="navigation-item w-nav-link">CONTACT</a>
+          <a href="work.html" class="navigation-item w-nav-link">Academics &amp; Experience</a>
+          <a href="activities.html" class="navigation-item w-nav-link">PROFESSIONAL ACTIVITIES</a>
+          <a href="projects/project-home.html" class="navigation-item w-nav-link">PROJECTS</a>
+          <a href="contact.html" class="navigation-item w-nav-link">CONTACT</a>
         </nav>
         <div class="menu-button w-nav-button"><img src="images/menu-icon_1menu-icon.png" width="22" alt=""
             class="menu-icon"></div>
@@ -48,19 +49,22 @@
           <h2 class="hi-there-heading">Hi! I&#x27;m <span class="text-span-2">Simone</span>.</h2>
           <div class="label cc-about-light"><span class="text-span-7">It&#x27;s nice to meet you.</span></div>
           <p class="paragraph-light"><br>I am currently a senior studying Computer Science at <span
-              class="text-span-3">Cornell University</span><span> </span>within the College of Engineering . I
+              class="highlight-pink">Cornell University</span><span> </span>within the College of Engineering . I
             additionally study Law and Information Ethics, Law, and Policy to investigate the <span
-              class="text-span-4">intersection of technology, politics, and policy</span>. I am actively pursuing
-            graduate education and roles concentrating in <span class="text-span-8">the field of cybersecurity</span>.
-          </p>
+              class="highlight-orange">intersection of technology, politics, and policy</span>. I am actively pursuing
+            graduate education and roles concentrating in <span class="highlight-pink">the field of
+              cybersecurity</span>.</p>
+          <div class="w-layout-blockcontainer container-2 w-container">
+            <a href="#about" class="button-2 w-button">More About Me &gt;</a>
+          </div>
         </div><img src="images/Simone_Green_Headshot.jpg" alt=""
-          id="w-node-_9b2922ad-09b1-aebb-0430-7dee623c62c8-e3382b46"
-          sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, 94vw"
+          id="w-node-_9b2922ad-09b1-aebb-0430-7dee623c62c8-e3382b46" height="600"
+          sizes="(max-width: 479px) 100vw, (max-width: 767px) 86vw, 520.8984375px"
           srcset="images/Simone_Green_Headshot-p-500.jpg 500w, images/Simone_Green_Headshot-p-800.jpg 800w, images/Simone_Green_Headshot-p-1080.jpg 1080w, images/Simone_Green_Headshot-p-1600.jpg 1600w, images/Simone_Green_Headshot.jpg 1778w">
       </div>
     </div>
   </div>
-  <div class="section">
+  <section id="about" class="aboutme">
     <div class="container">
       <div class="container">
         <div class="social-media-heading">
@@ -69,67 +73,44 @@
         </div>
       </div>
     </div>
-  </div>
+  </section>
   <div class="section">
-    <p><span class="text-span-9"><strong>Personal Interests:<br>‍<br></strong></span>I am passionate about <span
-        class="text-span-10">breaking down barriers for underrepresented minorities</span> within the tech industry.
-      I am eager to learn more about using technology for social good and am passionate about increasing access of tech
-      education to underserved communities. I enjoy community service and engaging with the world around me as an <span
-        class="text-span-12">active, global citizen</span>. My love for travel has recently blossomed and I am currently
-      engaged in <span class="text-span-11">language-learning</span> with a focus on Arabic.<br></p>
-    <p><span class="text-span-9"><strong>Professional Interests:<br>‍<br></strong></span>The majority of my professional
-      experience and primary interest has been in the realm of <span class="text-span-13">cyber threat
-        intelligence</span>. I am curious about the influence of geopolitics and the global economy on threat actor
-      developments in cyberspace. At the crux of cybersecurity, threat intelligence has led me to new interests in <span
-        class="text-span-14">adversary emulation and defensive cyberoperations</span>. I also have strong interests in
-      cyberwarfare, both from a capability and governance perspective.</p>
+    <p class="paragraph"><span class="text-span-9"><strong>Personal Interests:<br>‍<br></strong></span>I am passionate
+      about <span class="text-span-10">breaking down barriers for underrepresented minorities</span> within the tech
+      industry. I am eager to learn more about using technology for social good and am passionate about increasing
+      access of tech education to underserved communities. I enjoy community service and engaging with the world around
+      me as an <span class="text-span-12">active, global citizen</span>. My love for travel has recently blossomed and
+      I am currently engaged in <span class="text-span-11">language-learning</span> with a focus on Arabic.<br></p>
+    <p class="paragraph-2"><span class="text-span-9"><strong>Professional Interests:<br>‍<br></strong></span>The
+      majority of my professional experience and primary interest has been in the realm of <span
+        class="text-span-13">cyber threat intelligence</span>. I am curious about the influence of geopolitics and the
+      global economy on threat actor developments in cyberspace. At the crux of cybersecurity, threat intelligence has
+      led me to new interests in <span class="text-span-14">adversary emulation and defensive cyberoperations</span>.
+      I also have strong interests in cyberwarfare, both from a capability and governance perspective.</p>
   </div>
-  <div class="section cc-contact">
-    <div class="container">
-      <div class="contact">
-        <div class="contact-headline">
-          <h3>Want to get in touch?<br></h3>
-          <p class="paragraph-light">Feel free to contact me below!</p>
-        </div>
-        <div class="contact-form-wrap">
-          <div class="w-form">
-            <form id="wf-form-Email-Form" name="wf-form-Email-Form" data-name="Email Form" method="get"
-              class="contact-form" data-wf-page-id="653f2156febcba79e3382b46"
-              data-wf-element-id="d783a17e-0b35-a13a-0448-a852d0df4a30">
-              <div class="w-layout-grid contact-form-grid">
-                <div id="w-node-d783a17e-0b35-a13a-0448-a852d0df4a32-d0df4a24"><label for="Name-3">Name</label><input
-                    type="text" class="text-field w-input" maxlength="256" name="Name" data-name="Name"
-                    placeholder="Enter your name" id="Name"></div>
-                <div id="w-node-d783a17e-0b35-a13a-0448-a852d0df4a36-d0df4a24"><label for="Email-3">Email
-                    Address</label><input type="email" class="text-field w-input" maxlength="256" name="Email"
-                    data-name="Email" placeholder="Enter your email" id="Email" required=""></div>
-                <div id="w-node-d783a17e-0b35-a13a-0448-a852d0df4a3a-d0df4a24"><label
-                    for="Message">Message</label><textarea id="Message" name="Message" placeholder="Enter your message"
-                    maxlength="5000" data-name="Message" class="text-field cc-textarea w-input"></textarea></div>
-              </div><input type="submit" value="Submit" data-wait="Please wait..." class="button w-button">
-            </form>
-            <div class="status-message cc-success-message w-form-done">
-              <div>Thank you! Your message has been received!</div>
-            </div>
-            <div class="status-message cc-error-message w-form-fail">
-              <div>Oops! Something went wrong while submitting the form.</div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+  <section class="section-2">
+    <p class="paragraph"><span class="text-span-9"><strong>Skills:<br></strong></span>‍<br></p>
+    <div class="w-layout-blockcontainer w-container"></div>
+  </section>
   <div class="footer-wrap">
     <div>
-      <a href="https://webflow.com/" target="_blank" class="webflow-link w-inline-block"><img
-          src="images/webflow-w-small2x_1webflow-w-small2x.png" width="15" alt="" class="webflow-logo-tiny">
-        <div class="paragraph-tiny">Powered by Webflow</div>
+      <a href="index.html" aria-current="page" class="footer-logo w-inline-block w--current"><img
+          src="images/simone-logo.jpeg" width="50" sizes="50px" loading="lazy" alt=""
+          srcset="images/simone-logo-p-500.jpeg 500w, images/simone-logo-p-800.jpeg 800w, images/simone-logo-p-1080.jpeg 1080w, images/simone-logo.jpeg 1200w"
+          class="logo logo-link">
+        <div class="paragraph-tiny">2023 by Simone Green.</div>
       </a>
     </div>
-    <div class="footer-links">
-      <a href="https://www.facebook.com/webflow/" target="_blank" class="footer-item">Facebook</a>
-      <a href="https://twitter.com/webflow" target="_blank" class="footer-item">Twitter</a>
-      <a href="https://www.instagram.com/webflowapp/" target="_blank" class="footer-item">Instagram</a>
+    <div class="footer-links"><img src="images/fb-icon.jpeg" width="25"
+        sizes="(max-width: 767px) 25px, (max-width: 991px) 3vw, 25px"
+        srcset="images/fb-icon-p-500.jpeg 500w, images/fb-icon-p-800.jpeg 800w, images/fb-icon.jpeg 1000w" alt=""
+        class="logo">
+      <a href="https://www.facebook.com/" target="_blank" class="footer-item">Facebook</a><img
+        src="images/linkedin-logo.png" width="25" alt="" class="logo">
+      <a href="https://linkedin.com/in/green-simone/" target="_blank" class="footer-item">LINKEDIN</a><img
+        src="images/github-logo.png" width="25" sizes="(max-width: 767px) 25px, (max-width: 991px) 3vw, 25px"
+        srcset="images/github-logo-p-500.png 500w, images/github-logo.png 512w" alt="" class="logo">
+      <a href="https://github.com/sgreen2302" target="_blank" class="footer-item">GITHUB</a>
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=653f2156febcba79e3382b0a"
