--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Tue Oct 31 2023 06:09:53 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="653ffc8a30d5e24ea38db534" data-wf-site="653f2156febcba79e3382b0a">
+<!DOCTYPE html>
+<html>
+
 <head>
   <meta charset="utf-8">
   <title>Contact</title>
@@ -14,14 +14,21 @@
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-  <script type="text/javascript">WebFont.load({  google: {    families: ["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic","Bitter:400,700,400italic"]  }});</script>
-  <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
+  <script
+    type="text/javascript">WebFont.load({ google: { families: ["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic", "Bitter:400,700,400italic"] } });</script>
+  <script
+    type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
   <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
+
 <body>
-  <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navigation w-nav">
-    <div class="navigation-items"><img src="images/simone-logo.jpeg" loading="lazy" width="100" sizes="(max-width: 479px) 42vw, 100px" alt="" srcset="images/simone-logo-p-500.jpeg 500w, images/simone-logo-p-800.jpeg 800w, images/simone-logo-p-1080.jpeg 1080w, images/simone-logo.jpeg 1200w" class="logo logo-link">
+  <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease"
+    role="banner" class="navigation w-nav">
+    <div class="navigation-items"><img src="images/simone-logo.jpeg" loading="lazy" width="100"
+        sizes="(max-width: 479px) 42vw, 100px" alt=""
+        srcset="images/simone-logo-p-500.jpeg 500w, images/simone-logo-p-800.jpeg 800w, images/simone-logo-p-1080.jpeg 1080w, images/simone-logo.jpeg 1200w"
+        class="logo logo-link">
       <div class="navigation-wrap">
         <nav role="navigation" class="navigation-items w-nav-menu">
           <a href="index.html" class="navigation-item w-nav-link">ABOUT</a>
@@ -30,7 +37,8 @@
           <a href="projects/project-home.html" class="navigation-item w-nav-link">PROJECTS</a>
           <a href="contact.html" aria-current="page" class="navigation-item w-nav-link w--current">CONTACT</a>
         </nav>
-        <div class="menu-button w-nav-button"><img src="images/menu-icon_1menu-icon.png" width="22" alt="" class="menu-icon"></div>
+        <div class="menu-button w-nav-button"><img src="images/menu-icon_1menu-icon.png" width="22" alt=""
+            class="menu-icon"></div>
       </div>
     </div>
   </div>
@@ -39,15 +47,24 @@
       <div class="contact">
         <div class="contact-headline">
           <h3 class="heading-2">Contact Me<br></h3>
-          <p class="paragraph-light">I would love to hear from you with any inquiries or requests.<br>Please feel free to use this form or my email below, thanks!</p>
+          <p class="paragraph-light">I would love to hear from you with any inquiries or requests.<br>Please feel free
+            to use this form or my email below, thanks!</p>
         </div>
         <div class="contact-form-wrap">
           <div class="w-form">
-            <form id="wf-form-Email-Form" name="wf-form-Email-Form" data-name="Email Form" method="get" class="contact-form" data-wf-page-id="653ffc8a30d5e24ea38db534" data-wf-element-id="d783a17e-0b35-a13a-0448-a852d0df4a30">
+            <form id="wf-form-Email-Form" name="wf-form-Email-Form" data-name="Email Form" method="get"
+              class="contact-form" data-wf-page-id="653ffc8a30d5e24ea38db534"
+              data-wf-element-id="d783a17e-0b35-a13a-0448-a852d0df4a30">
               <div class="w-layout-grid contact-form-grid">
-                <div id="w-node-d783a17e-0b35-a13a-0448-a852d0df4a32-d0df4a24"><label for="Name-3">Name</label><input type="text" class="text-field w-input" maxlength="256" name="Name" data-name="Name" placeholder="Enter your name" id="Name"></div>
-                <div id="w-node-d783a17e-0b35-a13a-0448-a852d0df4a36-d0df4a24"><label for="Email-3">Email Address</label><input type="email" class="text-field w-input" maxlength="256" name="Email" data-name="Email" placeholder="Enter your email" id="Email" required=""></div>
-                <div id="w-node-d783a17e-0b35-a13a-0448-a852d0df4a3a-d0df4a24"><label for="Message">Message</label><textarea id="Message" name="Message" placeholder="Enter your message" maxlength="5000" data-name="Message" class="text-field cc-textarea w-input"></textarea></div>
+                <div id="w-node-d783a17e-0b35-a13a-0448-a852d0df4a32-d0df4a24"><label for="Name-3">Name</label><input
+                    type="text" class="text-field w-input" maxlength="256" name="Name" data-name="Name"
+                    placeholder="Enter your name" id="Name"></div>
+                <div id="w-node-d783a17e-0b35-a13a-0448-a852d0df4a36-d0df4a24"><label for="Email-3">Email
+                    Address</label><input type="email" class="text-field w-input" maxlength="256" name="Email"
+                    data-name="Email" placeholder="Enter your email" id="Email" required=""></div>
+                <div id="w-node-d783a17e-0b35-a13a-0448-a852d0df4a3a-d0df4a24"><label
+                    for="Message">Message</label><textarea id="Message" name="Message" placeholder="Enter your message"
+                    maxlength="5000" data-name="Message" class="text-field cc-textarea w-input"></textarea></div>
               </div><input type="submit" value="Submit" data-wait="Please wait..." class="button w-button">
             </form>
             <div class="status-message cc-success-message w-form-done">
@@ -60,9 +77,15 @@
         </div>
       </div>
       <section class="contact-basic">
-        <div class="media-list"><img src="images/fb-icon.jpeg" width="25" sizes="(max-width: 767px) 25px, (max-width: 991px) 3vw, 25px" srcset="images/fb-icon-p-500.jpeg 500w, images/fb-icon-p-800.jpeg 800w, images/fb-icon.jpeg 1000w" alt="" class="logo">
-          <a href="https://www.facebook.com/" target="_blank" class="footer-item">Facebook</a><img src="images/linkedin-logo.png" width="25" alt="" class="logo">
-          <a href="https://linkedin.com/in/green-simone/" target="_blank" class="footer-item">LINKEDIN</a><img src="images/github-logo.png" width="25" sizes="(max-width: 767px) 25px, (max-width: 991px) 3vw, 25px" srcset="images/github-logo-p-500.png 500w, images/github-logo.png 512w" alt="" class="logo">
+        <div class="media-list"><img src="images/fb-icon.jpeg" width="25"
+            sizes="(max-width: 767px) 25px, (max-width: 991px) 3vw, 25px"
+            srcset="images/fb-icon-p-500.jpeg 500w, images/fb-icon-p-800.jpeg 800w, images/fb-icon.jpeg 1000w" alt=""
+            class="logo">
+          <a href="https://www.facebook.com/" target="_blank" class="footer-item">Facebook</a><img
+            src="images/linkedin-logo.png" width="25" alt="" class="logo">
+          <a href="https://linkedin.com/in/green-simone/" target="_blank" class="footer-item">LINKEDIN</a><img
+            src="images/github-logo.png" width="25" sizes="(max-width: 767px) 25px, (max-width: 991px) 3vw, 25px"
+            srcset="images/github-logo-p-500.png 500w, images/github-logo.png 512w" alt="" class="logo">
           <a href="https://github.com/sgreen2302" target="_blank" class="footer-item">GITHUB</a>
           <div class="rich-text-block w-richtext">
             <p><strong>Email:</strong></p>
@@ -77,17 +100,29 @@
   </div>
   <div class="footer-wrap">
     <div>
-      <a href="index.html" class="footer-logo w-inline-block"><img src="images/simone-logo.jpeg" width="50" sizes="50px" loading="lazy" alt="" srcset="images/simone-logo-p-500.jpeg 500w, images/simone-logo-p-800.jpeg 800w, images/simone-logo-p-1080.jpeg 1080w, images/simone-logo.jpeg 1200w" class="logo logo-link">
+      <a href="index.html" class="footer-logo w-inline-block"><img src="images/simone-logo.jpeg" width="50" sizes="50px"
+          loading="lazy" alt=""
+          srcset="images/simone-logo-p-500.jpeg 500w, images/simone-logo-p-800.jpeg 800w, images/simone-logo-p-1080.jpeg 1080w, images/simone-logo.jpeg 1200w"
+          class="logo logo-link">
         <div class="paragraph-tiny">2023 by Simone Green.</div>
       </a>
     </div>
-    <div class="footer-links"><img src="images/fb-icon.jpeg" width="25" sizes="(max-width: 767px) 25px, (max-width: 991px) 3vw, 25px" srcset="images/fb-icon-p-500.jpeg 500w, images/fb-icon-p-800.jpeg 800w, images/fb-icon.jpeg 1000w" alt="" class="logo">
-      <a href="https://www.facebook.com/" target="_blank" class="footer-item">Facebook</a><img src="images/linkedin-logo.png" width="25" alt="" class="logo">
-      <a href="https://linkedin.com/in/green-simone/" target="_blank" class="footer-item">LINKEDIN</a><img src="images/github-logo.png" width="25" sizes="(max-width: 767px) 25px, (max-width: 991px) 3vw, 25px" srcset="images/github-logo-p-500.png 500w, images/github-logo.png 512w" alt="" class="logo">
+    <div class="footer-links"><img src="images/fb-icon.jpeg" width="25"
+        sizes="(max-width: 767px) 25px, (max-width: 991px) 3vw, 25px"
+        srcset="images/fb-icon-p-500.jpeg 500w, images/fb-icon-p-800.jpeg 800w, images/fb-icon.jpeg 1000w" alt=""
+        class="logo">
+      <a href="https://www.facebook.com/" target="_blank" class="footer-item">Facebook</a><img
+        src="images/linkedin-logo.png" width="25" alt="" class="logo">
+      <a href="https://linkedin.com/in/green-simone/" target="_blank" class="footer-item">LINKEDIN</a><img
+        src="images/github-logo.png" width="25" sizes="(max-width: 767px) 25px, (max-width: 991px) 3vw, 25px"
+        srcset="images/github-logo-p-500.png 500w, images/github-logo.png 512w" alt="" class="logo">
       <a href="https://github.com/sgreen2302" target="_blank" class="footer-item">GITHUB</a>
     </div>
   </div>
-  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=653f2156febcba79e3382b0a" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=653f2156febcba79e3382b0a"
+    type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+    crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
 </body>
+
 </html>
