Edit site link image

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Simone's Portfolio</title>
-  <meta content="About" property="og:title">
-  <meta content="About" property="twitter:title">
+  <meta content="Simone Green's Portfolio" property="og:title">
+  <meta property="og:image" content="images/simone-logo.jpeg">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/portfolio.css" rel="stylesheet" type="text/css">
