--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>Simone's Portfolio</title>
   <meta content="Simone Green's Portfolio" property="og:title">
+  <meta content="Simone Green's Portfolio" property="twitter:title">
   <meta property="og:image" content="images/simone-logo.jpeg">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
