--- a/work.html
+++ b/work.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>Academics & Experience</title>
   <meta content="Academics & Experience" property="og:title">
+  <meta content="Academics & Experience" property="twitter:title">
   <meta property="og:image" content="images/simone-logo.jpeg">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
