--- a/projects/project-home.html
+++ b/projects/project-home.html
@@ -6,11 +6,11 @@
   <title>Project Home</title>
   <meta content="Project Home" property="og:title">
   <meta content="Project Home" property="twitter:title">
-  <meta property="og:image" content="..images/simone-logo.jpeg">
+  <meta property="og:image" content="../images/simone-logo.jpeg">
   <meta content="width=device-width, initial-scale=1" name="viewport">
-  <link href="..css/normalize.css" rel="stylesheet" type="text/css">
-  <link href="..css/webflow.css" rel="stylesheet" type="text/css">
-  <link href="..css/portfolio.css" rel="stylesheet" type="text/css">
+  <link href="../css/normalize.css" rel="stylesheet" type="text/css">
+  <link href="../css/webflow.css" rel="stylesheet" type="text/css">
+  <link href="../css/portfolio.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
