--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         class="logo logo-link">
       <div class="navigation-wrap">
         <nav role="navigation" class="navigation-items w-nav-menu">
-          <a href="index.html" aria-current="page" class="navigation-item w-nav-link w--current">ABOUT</a>
+          <a href="/" aria-current="page" class="navigation-item w-nav-link w--current">ABOUT</a>
           <a href="work.html" class="navigation-item w-nav-link">Academics &amp; Experience</a>
           <a href="activities.html" class="navigation-item w-nav-link">PROFESSIONAL ACTIVITIES</a>
           <a href="projects/project-home.html" class="navigation-item w-nav-link">PROJECTS</a>
