index link mod for all

--- a/work.html
+++ b/work.html
@@ -31,7 +31,7 @@
         class="logo logo-link">
       <div class="navigation-wrap">
         <nav role="navigation" class="navigation-items w-nav-menu">
-          <a href="index.html" class="navigation-item w-nav-link">ABOUT</a>
+          <a href="/" class="navigation-item w-nav-link">ABOUT</a>
           <a href="work.html" aria-current="page" class="navigation-item w-nav-link w--current">Academics &amp;
             Experience</a>
           <a href="activities.html" class="navigation-item w-nav-link">PROFESSIONAL ACTIVITIES</a>
