index link mod for footer logo

--- a/projects/project-home.html
+++ b/projects/project-home.html
@@ -182,8 +182,8 @@
   </section>
   <div class="footer-wrap">
     <div>
-      <a href="../index.html" class="footer-logo w-inline-block"><img src="../images/simone-logo.jpeg" width="50"
-          sizes="50px" loading="lazy" alt=""
+      <a href="/" class="footer-logo w-inline-block"><img src="../images/simone-logo.jpeg" width="50" sizes="50px"
+          loading="lazy" alt=""
           srcset="../images/simone-logo-p-500.jpeg 500w, ../images/simone-logo-p-800.jpeg 800w, ../images/simone-logo-p-1080.jpeg 1080w, ../images/simone-logo.jpeg 1200w"
           class="logo logo-link">
         <div class="paragraph-tiny">2023 by Simone Green.</div>
