--- a/contact.html
+++ b/contact.html
@@ -100,7 +100,7 @@
   </div>
   <div class="footer-wrap">
     <div>
-      <a href="index.html" class="footer-logo w-inline-block"><img src="images/simone-logo.jpeg" width="50" sizes="50px"
+      <a href="/" class="footer-logo w-inline-block"><img src="images/simone-logo.jpeg" width="50" sizes="50px"
           loading="lazy" alt=""
           srcset="images/simone-logo-p-500.jpeg 500w, images/simone-logo-p-800.jpeg 800w, images/simone-logo-p-1080.jpeg 1080w, images/simone-logo.jpeg 1200w"
           class="logo logo-link">
