--- a/work.html
+++ b/work.html
@@ -25,23 +25,25 @@
 <body class="body-2">
   <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease"
     role="banner" class="navigation w-nav">
-    <div class="navigation-items"><img src="images/simone-logo.jpeg" loading="lazy" width="100"
-        sizes="(max-width: 479px) 42vw, 100px" alt=""
-        srcset="images/simone-logo-p-500.jpeg 500w, images/simone-logo-p-800.jpeg 800w, images/simone-logo-p-1080.jpeg 1080w, images/simone-logo.jpeg 1200w"
-        class="logo logo-link">
-      <div class="navigation-wrap">
-        <nav role="navigation" class="navigation-items w-nav-menu">
-          <a href="/" class="navigation-item w-nav-link">ABOUT</a>
-          <a href="work.html" aria-current="page" class="navigation-item w-nav-link w--current">Academics &amp;
-            Experience</a>
-          <a href="activities.html" class="navigation-item w-nav-link">PROFESSIONAL ACTIVITIES</a>
-          <a href="projects/project-home.html" class="navigation-item w-nav-link">PROJECTS</a>
-          <a href="contact.html" class="navigation-item w-nav-link">CONTACT</a>
-        </nav>
-        <div class="menu-button w-nav-button"><img src="images/menu-icon_1menu-icon.png" width="22" alt=""
-            class="menu-icon"></div>
-      </div>
+    <a href="/" aria-current="page">
+      <div class="navigation-items"><img src="images/simone-logo.jpeg" loading="lazy" width="100"
+          sizes="(max-width: 479px) 42vw, 100px" alt=""
+          srcset="images/simone-logo-p-500.jpeg 500w, images/simone-logo-p-800.jpeg 800w, images/simone-logo-p-1080.jpeg 1080w, images/simone-logo.jpeg 1200w"
+          class="logo logo-link">
+    </a>
+    <div class="navigation-wrap">
+      <nav role="navigation" class="navigation-items w-nav-menu">
+        <a href="/" class="navigation-item w-nav-link">ABOUT</a>
+        <a href="work.html" aria-current="page" class="navigation-item w-nav-link w--current">Academics &amp;
+          Experience</a>
+        <a href="activities.html" class="navigation-item w-nav-link">PROFESSIONAL ACTIVITIES</a>
+        <a href="projects/project-home.html" class="navigation-item w-nav-link">PROJECTS</a>
+        <a href="contact.html" class="navigation-item w-nav-link">CONTACT</a>
+      </nav>
+      <div class="menu-button w-nav-button"><img src="images/menu-icon_1menu-icon.png" width="22" alt=""
+          class="menu-icon"></div>
     </div>
+  </div>
   </div>
   <div class="section">
     <div class="container">
