--- a/projects/project-1.html
+++ b/projects/project-1.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Project 1</title>
+  <title>Command Line Mancala</title>
   <meta content="Project 1" property="og:title">
   <meta content="Project 1" property="twitter:title">
   <meta property="og:image" content="../images/simone-logo.jpeg">
