--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
   <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease"
     role="banner" class="navigation w-nav">
     <a href="/" aria-current="page">
-      <div class="navigation-items"><img src="images/simone-logo.jpeg" loading="lazy" width="100"
+      <div class="navigation-items"><img src="images/simone-logo-removebg.png" loading="lazy" width="100"
           sizes="(max-width: 479px) 42vw, 100px" alt=""
-          srcset="images/simone-logo-p-500.jpeg 500w, images/simone-logo-p-800.jpeg 800w, images/simone-logo-p-1080.jpeg 1080w, images/simone-logo.jpeg 1200w"
+          srcset="images/simone-logo-removebg-500.png 500w, images/simone-logo-removebg-800.png 800w, images/simone-logo-removebg-1080.png 1080w, images/simone-logo-removebg.png 1200w"
           class="logo logo-link">
     </a>
     <div class="navigation-wrap">
@@ -47,7 +47,7 @@
   <div class="section">
     <div class="container">
       <div class="w-layout-grid about-intro-grid">
-        <div id="w-node-_9b2922ad-09b1-aebb-0430-7dee623c62c1-e3382b46" class="about-head-text-wrap">
+        <div id="w-node-_1" class="about-head-text-wrap">
           <h2 class="hi-there-heading">Hi! I&#x27;m <span class="text-span-2">Simone</span>.</h2>
           <div class="label cc-about-light"><span class="text-span-7">It&#x27;s nice to meet you.</span></div>
           <p class="paragraph-light"><br>I am currently a senior studying Computer Science at <span
