--- a/projects/project-4.html
+++ b/projects/project-4.html
@@ -26,9 +26,9 @@
   <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease"
     role="banner" class="navigation w-nav">
     <a href="/" aria-current="page">
-      <div class="navigation-items"><img src="../images/simone-logo.jpeg" loading="lazy" width="100"
+      <div class="navigation-items"><img src="../images/simone-logo-removebg.png" loading="lazy" width="100"
           sizes="(max-width: 479px) 42vw, 100px" alt=""
-          srcset="../images/simone-logo-p-500.jpeg 500w, ../images/simone-logo-p-800.jpeg 800w, ../images/simone-logo-p-1080.jpeg 1080w, ../images/simone-logo.jpeg 1200w"
+          srcset="../images/simone-logo-removebg-500.png 500w, ../images/simone-logo-removebg-800.png.jpeg 800w, ../images/simone-logo-removebg-1080.jpeg 1080w, ../images/simone-logo-removebg.png 1200w"
           class="logo logo-link">
     </a>
     <div class="navigation-wrap">
