--- a/projects/project-1.html
+++ b/projects/project-1.html
@@ -54,8 +54,14 @@
         width="940" height="528" scrolling="no" allowfullscreen="" title="Mancala Final Demo"></iframe></div>
     <div class="w-layout-blockcontainer container-5 w-container">
       <h1 class="heading">Command Line Mancala</h1>
-      <p class="paragraph-8"><span class="highlight-orange">Description</span>:<br>here I will provide a brief overview
-        of the project</p>
+      <p class="paragraph-8"><span class="highlight-orange">Description</span>:<br>This was a group project, as
+        part of the final for the course titled: <a href="https://www.cs.cornell.edu/courses/cs3110/2022fa/"> CS 3110:
+          Functional Programming and Data Structures.</a><br>Our project is a command-line
+        interactive version of the game Mancala.
+        It supports two-player gameplay and additionally allows users to play
+        against a computer AI in a single-player mode, with four difficulty levels
+        to choose from. The interface keeps track of the winner for each round and
+        provides an option to continue gameplay by prompting to play again.</p>
       <section class="section-3"><img src="../images/star-circle.png" loading="lazy" width="25" height="25" alt=""
           srcset="../images/star-circle.png 500w, ../images/star-circle.png 692w"
           sizes="(max-width: 767px) 25px, (max-width: 991px) 3vw, 25px" class="image-3">
@@ -74,7 +80,9 @@
       <ul role="list" class="list-2">
         <li class="list-item-4"><strong>Purpose: </strong>This project was created as a final composition for a course
           on functional programming.</li>
-        <li><strong>Use:</strong></li>
+        <li><strong>Use:</strong> This game is primarily for entertainment purposes, as it is a digital version of the
+          traditional Mancala game. Additionally, this can be used to become more familiar with the terminal via game.
+        </li>
       </ul>
       <section class="section-3"><img src="../images/star-circle.png" loading="lazy" width="25" height="25" alt=""
           srcset="../images/star-circle.png 500w, ../images/star-circle.png 692w"
