--- a/projects/project-3.html
+++ b/projects/project-3.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Project 3</title>
-  <meta content="Project 3" property="og:title">
-  <meta content="Project 3" property="twitter:title">
+  <title>Decoding Diversity</title>
+  <meta content="Project 2" property="og:title">
+  <meta content="Project 2" property="twitter:title">
   <meta property="og:image" content="../images/simone-logo.jpeg">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="../css/normalize.css" rel="stylesheet" type="text/css">
@@ -45,67 +45,66 @@
   </div>
   </div>
   <div class="section">
-    <div class="container">
-      <div class="w-layout-grid project-overview-grid">
-        <div id="w-node-_0befc76b-828c-2822-f9fa-f2c6de040bbf-e3382b4a">
-          <h1 class="heading-jumbo">Project 3</h1>
-          <div class="paragraph-light">Web Design</div>
-        </div>
-        <div id="w-node-_0befc76b-828c-2822-f9fa-f2c6de040bc4-e3382b4a">
-          <div class="position-name-text">Project Overview</div>
-          <div class="paragraph-light cc-position-name">Far far away, behind the word mountains, far from the countries
-            Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the
-            coast of the Semantics, a large language ocean. </div>
-        </div>
-        <div id="w-node-_0befc76b-828c-2822-f9fa-f2c6de040bc9-e3382b4a">
-          <div class="position-name-text">My Contributions</div>
-          <div class="paragraph-light cc-position-name">Far far away, behind the word mountains, far from the countries
-            Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the
-            coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies
-            it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly
-            into your mouth.</div>
-        </div>
-      </div>
-    </div>
+    <div class="container"></div>
+    <a href="../projects/project-home.html" class="button-3 w-button">X</a>
   </div>
-  <div class="section"><img src="../images/portfolio-4---wide.svg" alt="" class="detail-header-image"></div>
   <div class="section">
-    <div class="container">
-      <div class="w-layout-grid project-description-grid">
-        <div id="w-node-b915ad84-715b-fc9d-8156-ee63d52fd22b-e3382b4a" class="paragraph-light">Far far away, behind the
-          word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they
-          live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden
-          flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which
-          roasted parts of sentences fly into your mouth. <br>‍<br>Far far away, behind the word mountains, far from the
-          countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at
-          the coast of the Semantics, a large language ocean. Far far away, behind the word mountains, far from the
-          countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at
-          the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and
-          supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences
-          fly into your mouth. <br>‍<br>Far far away, behind the word mountains, far from the countries Vokalia and
-          Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the
-          Semantics, a large language ocean. </div>
-        <div id="w-node-_32040423-4078-1b23-6771-e6c78f8a716d-e3382b4a" class="work-position-wrap">
-          <div class="position-name-text">Webflow</div>
-          <div class="paragraph-light cc-position-name">Visual Developer</div>
-          <div class="paragraph-tiny cc-paragraph-tiny-light">Jun 2016 — Jul 2017<br></div>
+    <div style="padding-top:56.17021276595745%" class="video w-video w-embed"><iframe width="560" height="315"
+        src="https://www.youtube.com/embed/kQ2kuSMTewg?si=PgiWRFT21_ApXNVH" title="YouTube video player" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen></iframe></div>
+    <div class="w-layout-blockcontainer container-5 w-container">
+      <h1 class="heading">U.S. Gun Violence:<br>Before and After COVID-19</h1>
+      <p class="paragraph-8"><span class="highlight-orange">Description</span>:<br>This was a group project, as
+        part of the final for the course titled: <a href="https://jeffrz.com/info3300/"> Data Driven Web-Applications.
+        </a></p> See the embeded page below or click here to visit the
+      interactive page! <a text-align=center
+        href="https://pages.github.coecis.cornell.edu/sfg63/info3300-p2/"><strong>CLICK
+          HERE</strong><br><br></a>More details to come!<br><br>
+      <section class="section-3"><img src="../images/star-circle.png" loading="lazy" width="25" height="25" alt=""
+          srcset="../images/star-circle.png 500w, ../images/star-circle.png 692w"
+          sizes="(max-width: 767px) 25px, (max-width: 991px) 3vw, 25px" class="image-3">
+        <p><span class="highlight-pink">Skills &amp; Tools</span></p>
+      </section>
+      <ul role="list" class="list-2">
+        <li class="list-item-4"><strong>Programming Languages:</strong>HTML, CSS, JavaScript</li>
+        <li><strong>Tools: </strong>Git, Pandas, Matplotlib</li>
+        <li><strong>Other: </strong>Agile Workflow Methodology</li>
+      </ul>
+      <section class="section-3"><img src="../images/star-circle.png" loading="lazy" width="25" height="25" alt=""
+          srcset="../images/star-circle.png 500w, ../images/star-circle.png 692w"
+          sizes="(max-width: 767px) 25px, (max-width: 991px) 3vw, 25px" class="image-3">
+        <p class="highlight-pink">Purpose &amp; Use</p>
+      </section>
+      <ul role="list" class="list-2">
+        <li class="list-item-4"><strong>Purpose: </strong></li>
+        <li><strong>Use:</strong>
+        </li>
+      </ul>
+      <section class="section-3"><img src="../images/star-circle.png" loading="lazy" width="25" height="25" alt=""
+          srcset="../images/star-circle.png 500w, ../images/star-circle.png 692w"
+          sizes="(max-width: 767px) 25px, (max-width: 991px) 3vw, 25px" class="image-3">
+        <p class="highlight-pink">Links</p>
+      </section>
+      <div class="w-layout-blockcontainer w-container">
+        <div class="footer-links-copy"><img src="../images/youtube-logo.jpeg" width="25"
+            sizes="(max-width: 767px) 25px, (max-width: 991px) 3vw, 25px"
+            srcset="../images/youtube-logo.jpeg 500w, ../images/youtube-logo.jpeg 800w, ../images/youtube-logo.jpeg 1080w, ../images/youtube-logo.jpeg 1200w"
+            alt="" class="logo">
+          <a href="https://www.youtube.com/watch?v=kQ2kuSMTewg" target="_blank" class="footer-item">VIDEO</a><img
+            src="../images/github-logo.png" width="25" sizes="(max-width: 767px) 25px, (max-width: 991px) 3vw, 25px"
+            srcset="../images/github-logo-p-500.png 500w, ../images/github-logo.png 512w" alt="" class="logo">
+          <a href="https://github.coecis.cornell.edu/sfg63/info3300-p2" target="_blank"
+            class="footer-item">REPOSITORY</a>
         </div>
       </div>
     </div>
+  </div><br>
+  <h3 class="heading-3">Embedded Interactive Page:</h3>
+  <div style="padding-top:56.17021276595745%" class="w-video w-embed">
+    <iframe width=100% src="https://pages.github.coecis.cornell.edu/sfg63/info3300-p2/"></iframe>
   </div>
-  <div class="section"><img src="../images/portfolio-2---wide.svg" width="920" alt="" class="detail-image"><img
-      src="../images/portfolio-1---wide.svg" width="920" alt="" class="detail-image"><img
-      src="../images/portfolio-4---wide.svg" width="920" alt="" class="detail-image"></div>
-  <div class="section">
-    <div class="container">
-      <div class="email-section">
-        <h3>Want to work together?</h3>
-        <p>If you like what you see and want to work together, get in touch!</p>
-        <a href="mailto:jane.lo@portfolio.com?subject=You&#x27;ve%20got%20mail!"
-          class="email-link">jane@portfolio.com</a>
-      </div>
-    </div>
-  </div>
+
   <div class="footer-wrap">
     <div>
       <a href="../index.html" class="footer-logo w-inline-block"><img src="../images/simone-logo.jpeg" width="50"
