--- a/projects/project-home.html
+++ b/projects/project-home.html
@@ -56,9 +56,7 @@
         data-nav-spacing="12" data-duration="500" data-infinite="true">
         <div class="w-slider-mask">
           <div class="proj-slide w-slide">
-            <div class="projects"><img
-                src="https://uploads-ssl.webflow.com/62434fa732124a0fb112aab4/62434fa732124af1aa12aadf_placeholder%201.svg"
-                loading="lazy" alt="" class="proj-image">
+            <div class="projects"><img src="../images/mancala.png" loading="lazy" alt="" class="proj-image">
               <div class="proj-info">
                 <h3 class="proj-name">Command Line Mancala</h3>
                 <p class="proj-description">A command-line based video game that mimics the traditional game of Mancala.
@@ -76,9 +74,7 @@
             </div>
           </div>
           <div class="proj-slide w-slide">
-            <div class="projects"><img
-                src="https://uploads-ssl.webflow.com/62434fa732124a0fb112aab4/62434fa732124af1aa12aadf_placeholder%201.svg"
-                loading="lazy" alt="" class="proj-image">
+            <div class="projects"><img src="../images/e2_graph.png" loading="lazy" alt="" class="proj-image">
               <div class="proj-info">
                 <h3 class="proj-name">Deep Learning:<br>Decoding Diversity</h3>
                 <p class="proj-description">A neural network model that predicts age, gender, and ethnicity from image
@@ -96,9 +92,7 @@
             </div>
           </div>
           <div class="proj-slide w-slide">
-            <div class="projects"><img
-                src="https://uploads-ssl.webflow.com/62434fa732124a0fb112aab4/62434fa732124af1aa12aadf_placeholder%201.svg"
-                loading="lazy" alt="" class="proj-image">
+            <div class="projects"><img src="../images/info3300_p2.png" loading="lazy" alt="" class="proj-image">
               <div class="proj-info">
                 <h3 class="proj-name">U.S. Gun Violence During Covid-19</h3>
                 <p class="proj-description">An interactive web archive that depicts analysis  of U.S. gun violence
