--- a/projects/project-2.html
+++ b/projects/project-2.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Project 2</title>
+  <title>Decoding Diversity</title>
   <meta content="Project 2" property="og:title">
   <meta content="Project 2" property="twitter:title">
   <meta property="og:image" content="../images/simone-logo.jpeg">
@@ -45,64 +45,59 @@
   </div>
   </div>
   <div class="section">
-    <div class="container">
-      <div class="w-layout-grid project-overview-grid">
-        <div id="w-node-_0befc76b-828c-2822-f9fa-f2c6de040bbf-e3382b49">
-          <h1 class="heading-jumbo">Project 2</h1>
-          <div class="paragraph-light">Web Design</div>
-        </div>
-        <div id="w-node-_0befc76b-828c-2822-f9fa-f2c6de040bc4-e3382b49">
-          <div class="position-name-text">Project Overview</div>
-          <div class="paragraph-light cc-position-name">Far far away, behind the word mountains, far from the countries
-            Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the
-            coast of the Semantics, a large language ocean. </div>
-        </div>
-        <div id="w-node-_0befc76b-828c-2822-f9fa-f2c6de040bc9-e3382b49">
-          <div class="position-name-text">My Contributions</div>
-          <div class="paragraph-light cc-position-name">Far far away, behind the word mountains, far from the countries
-            Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the
-            coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies
-            it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly
-            into your mouth.</div>
-        </div>
-      </div>
-    </div>
+    <div class="container"></div>
+    <a href="../projects/project-home.html" class="button-3 w-button">X</a>
   </div>
-  <div class="section"><img src="../images/portfolio-4---wide.svg" alt="" class="detail-header-image"></div>
   <div class="section">
-    <div class="container">
-      <div class="w-layout-grid project-description-grid">
-        <div id="w-node-b915ad84-715b-fc9d-8156-ee63d52fd22b-e3382b49" class="paragraph-light">Far far away, behind the
-          word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they
-          live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden
-          flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which
-          roasted parts of sentences fly into your mouth. <br>‍<br>Far far away, behind the word mountains, far from the
-          countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at
-          the coast of the Semantics, a large language ocean. Far far away, behind the word mountains, far from the
-          countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at
-          the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and
-          supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences
-          fly into your mouth. <br>‍<br>Far far away, behind the word mountains, far from the countries Vokalia and
-          Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the
-          Semantics, a large language ocean. </div>
-        <div id="w-node-_9fda4a37-cb21-e2a1-58de-88a206fa61ae-e3382b49" class="work-position-wrap">
-          <div class="position-name-text">Webflow</div>
-          <div class="paragraph-light cc-position-name">Web Designer</div>
-          <div class="paragraph-tiny cc-paragraph-tiny-light">Apr 2015 — Mar 2016<br></div>
+    <div style="padding-top:56.17021276595745%" class="video w-video w-embed"><iframe
+        src="https://docs.google.com/presentation/d/e/2PACX-1vQ5ml7f5eYX-TWwHUkU5LL0jwWoAdODJoeMz96G69gPFL1Bl7kAjEvoSmi5JyQ-pHtZInQcd0NbYUBR/embed?start=false&loop=false&delayms=3000"
+        frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true"
+        webkitallowfullscreen="true"></iframe></div>
+    <div class="w-layout-blockcontainer container-5 w-container">
+      <h1 class="heading">Deep Learning: Decoding Diversity</h1>
+      <p class="paragraph-8"><span class="highlight-orange">Description</span>:<br>This was a group project, as
+        part of the final for the course titled: <a
+          href="https://disabroad.org/copenhagen/courses/artificial-neural-networks-and-deep-learning/"> Artificial
+          Neural Networks & Deep Learning
+          .</a><br>More details to come!</p>
+      <section class="section-3"><img src="../images/star-circle.png" loading="lazy" width="25" height="25" alt=""
+          srcset="../images/star-circle.png 500w, ../images/star-circle.png 692w"
+          sizes="(max-width: 767px) 25px, (max-width: 991px) 3vw, 25px" class="image-3">
+        <p><span class="highlight-pink">Skills &amp; Tools</span></p>
+      </section>
+      <ul role="list" class="list-2">
+        <li class="list-item-4"><strong>Programming Languages:</strong>Python</li>
+        <li><strong>Tools: </strong>Git, Tensorflow/Keras, Pandas, Matplotlib</li>
+        <li><strong>Other: </strong>Agile Workflow Methodology,</li>
+      </ul>
+      <section class="section-3"><img src="../images/star-circle.png" loading="lazy" width="25" height="25" alt=""
+          srcset="../images/star-circle.png 500w, ../images/star-circle.png 692w"
+          sizes="(max-width: 767px) 25px, (max-width: 991px) 3vw, 25px" class="image-3">
+        <p class="highlight-pink">Purpose &amp; Use</p>
+      </section>
+      <ul role="list" class="list-2">
+        <li class="list-item-4"><strong>Purpose: </strong>This project was created as a final composition for a course
+          on deep learning.</li>
+        <li><strong>Use:</strong> This project explores the uses of neural networks for human-centered demographics and
+          the subsequent outcome of the project showcases how bias in data can impact such models.
+        </li>
+      </ul>
+      <section class="section-3"><img src="../images/star-circle.png" loading="lazy" width="25" height="25" alt=""
+          srcset="../images/star-circle.png 500w, ../images/star-circle.png 692w"
+          sizes="(max-width: 767px) 25px, (max-width: 991px) 3vw, 25px" class="image-3">
+        <p class="highlight-pink">Links</p>
+      </section>
+      <div class="w-layout-blockcontainer w-container">
+        <div class="footer-links-copy"><img src="../images/youtube-logo.jpeg" width="25"
+            sizes="(max-width: 767px) 25px, (max-width: 991px) 3vw, 25px"
+            srcset="../images/youtube-logo.jpeg 500w, ../images/youtube-logo.jpeg 800w, ../images/youtube-logo.jpeg 1080w, ../images/youtube-logo.jpeg 1200w"
+            alt="" class="logo">
+          <a href="https://medium.com/@sfg63/decoding-diversity-1cca2d05c281" target="_blank" class="footer-item">BLOG
+            POST</a><img src="../images/github-logo.png" width="25"
+            sizes="(max-width: 767px) 25px, (max-width: 991px) 3vw, 25px"
+            srcset="../images/github-logo-p-500.png 500w, ../images/github-logo.png 512w" alt="" class="logo">
+          <a href="" target="_blank" class="footer-item">REPOSITORY</a>
         </div>
-      </div>
-    </div>
-  </div>
-  <div class="section"><img src="../images/portfolio-2---wide.svg" width="920" alt="" class="detail-image"><img
-      src="../images/portfolio-1---wide.svg" width="920" alt="" class="detail-image"><img
-      src="../images/portfolio-4---wide.svg" width="920" alt="" class="detail-image"></div>
-  <div class="section">
-    <div class="container">
-      <div class="email-section">
-        <h3>Want to work together?</h3>
-        <p>If you like what you see and want to work together, get in touch!</p>
-        <a href="mailto:jane.lo@portfolio.com?subject=You&#x27;ve%20got%20mail!"
-          class="email-link">jane@portfolio.com</a>
       </div>
     </div>
   </div>
